# Ignite

./: .gitignore  README.md  broken.rs  client.js  db_schema.sql  deprecated_schema.sql  guide.md  loadTesting.js  main.rs  package-lock.json  package.json  prev_version.rs  spark.sql  spin_up.sh
.github/workflow/: main.yml  prod.yml
.github/workflows/: prod.yml
Sparkserver/: .env  Cargo.toml
Sparkserver/src/: Igniter.rs  Threads.rs  main.rs
WebsocketServer/: .gitignore  Cargo.toml  Dockerfile  compose.yaml  docker-compose.yml  dockerfile
WebsocketServer/src/: auth_clients.rs  handlers.rs  main.rs  map.rs  polling.rs  structs.rs  util.rs
WssDedicated/: Cargo.toml  compose.yaml
WssDedicated/src/: main.rs
dedicated_v2/: Cargo.toml  Dockerfile
dedicated_v2/src/: main.rs
ignition_sdk/: Cargo.toml
ignition_sdk/src/: lib.rs
ignition_shared_v5/: Cargo.toml  Dockerfile  compose.yaml
ignition_shared_v5/src/: auth_clients.rs  dashmap.rs  env_vars.rs  handlers.rs  io_register.rs  logging.rs  lru.rs  macros.rs  main.rs  map.rs  structs.rs  tcp.rs  util.rs
testing/src/: learn_rust.rs
wsspolling/: Cargo.toml
wsspolling/src/: main.rs  maina.rs
