[package]
name = "WebsocketServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socketioxide = { version = "0.11", features = ["state"] } # 0.8

tokio = { version = "1", features = ["full"] }

tracing = "0.1"

tracing-subscriber = "0.3"

axum = { version = "0.7.4", features = ["ws"] }

serde = { version = "1.0", features = ["derive"] }

serde_json = "1.0"

tower = "0.4.13"
tower-http = { version = "0.5", features = ["cors"]}